SIT-1856 username overflow on navbar fixed

--- a/app/assets/stylesheets/partial/_vmenu.scss
+++ b/app/assets/stylesheets/partial/_vmenu.scss
@@ -281,5 +281,6 @@
 
   .user-data {
     display: inline-block;
+    max-width: 165px;
   }
 }
